# rust-ddd-template

./: Cargo.toml  README.md
src/: main.rs
src/app/: mod.rs
src/app/persistence/postgresql/: postgresql.rs
src/app/server/: mod.rs
src/app/server/application/: routes.rs
src/app/server/infrastructure/: server.rs
src/contexts/: mod.rs
src/contexts/blog/infrastructure/controllers/: grettings.rs  mod.rs
src/contexts/gretting/: mod.rs
src/contexts/gretting/infrastructure/controllers/: grettings.rs
src/contexts/gretting/shared/: structs.rs
