[package]
name = "server-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
phf = { version = "0.11.1", features = ["macros"] }
